--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
   </section>
   
   <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
+    <h2>Contact Information</h2>
+    <p>Email: cbhorine25@transy.edu</p>
+    <p>Phone: +1 (502)-321-2530</p>
   </section>
   
   <footer>
-    <p>© 2024 Your Name. All rights reserved.</p>
+    <p>© 2024 Cameron Blaine Horine. All rights reserved.</p>
   </footer>
 </body>
 </html>
