--- a/index.html
+++ b/index.html
@@ -3,44 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Cameron Horine - Portfolio</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/script.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Cameron Blaine Horine</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Write a brief introduction about yourself.</p>
-  </section>
-  
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Project Title</h3>
-      <p>Describe your project.</p>
-      <a href="project-link">View Project</a>
+    <div class="hero">
+      <h1>Cameron B. Horine</h1>
+      <p>Computer Science & Economics Student</p>
+      <div class="contact-links">
+        <a href="mailto:cbhorine25@transy.edu">Email</a>
+        <a href="https://linkedin.com/in/cameron-horine" target="_blank">LinkedIn</a>
+        <a href="https://github.com/CameronH25" target="_blank">GitHub</a>
+      </div>
     </div>
-  </section>
-  
-  <section id="contact">
-    <h2>Contact Information</h2>
-    <p>Email: cbhorine25@transy.edu</p>
-    <p>Phone: +1 (502)-321-2530</p>
-  </section>
-  
+  </header>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>B.A. in Computer Science & Economics from Transylvania University, with minors in Mathematics and German. Active in multiple clubs and pursuing cybersecurity certifications.</p>
+    </section>
+
+    <section id="experience">
+      <h2>Experience</h2>
+      <div class="experience-item">
+        <h3>Sports Statistics Work-Study</h3>
+        <p><strong>Transylvania University</strong> (September 2024 - Present)</p>
+        <ul>
+          <li>Tracked and recorded game data, contributing to post-game analysis.</li>
+          <li>Collaborated with coaches and event organizers to ensure accurate data tracking.</li>
+          <li>Utilized digital scoring systems in fast-paced environments.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project-item">
+        <h3>Chess.com Clone</h3>
+        <p>Developing an offline version of Chess.com using TypeScript, featuring move validation and dynamic UI.</p>
+        <a href="https://github.com/CameronH25" target="_blank">View on GitHub</a>
+      </div>
+      <div class="project-item">
+        <h3>Linux Command Line Interface</h3>
+        <p>Built a custom CLI in C for Linux, supporting internal and external commands with efficient system interaction.</p>
+        <a href="https://github.com/CameronH25" target="_blank">View on GitHub</a>
+      </div>
+      <!-- Add more projects as needed -->
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>C, C++, Java, JavaScript, TypeScript, Python</li>
+        <li>Linux (Ubuntu, Mint), Windows, SQL, Git/GitHub</li>
+        <li>Quarto, LaTeX, R, Computer Building & Assembly</li>
+        <!-- Add more skills as needed -->
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Feel free to reach out via <a href="mailto:cbhorine25@transy.edu">email</a>.</p>
+    </section>
+  </main>
+
   <footer>
-    <p>© 2024 Cameron Blaine Horine. All rights reserved.</p>
+    <p>© 2024 Cameron B. Horine. All rights reserved.</p>
   </footer>
 </body>
 </html>
