--- a/index.html
+++ b/index.html
@@ -7,29 +7,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <div class="hero">
-      <h1>Cameron B. Horine</h1>
-      <p>Computer Science & Economics Student</p>
-      <div class="contact-links">
-        <a href="mailto:cbhorine25@transy.edu">Email</a>
-        <a href="https://linkedin.com/in/cameron-horine" target="_blank">LinkedIn</a>
-        <a href="https://github.com/CameronH25" target="_blank">GitHub</a>
-      </div>
-    </div>
-  </header>
+  <div class="sidebar">
+    <h1>Cameron B. Horine</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <main>
+  <div class="main-content">
     <section id="about">
       <h2>About Me</h2>
       <p>B.A. in Computer Science & Economics from Transylvania University, with minors in Mathematics and German. Active in multiple clubs and pursuing cybersecurity certifications.</p>
@@ -60,7 +51,6 @@
         <p>Built a custom CLI in C for Linux, supporting internal and external commands with efficient system interaction.</p>
         <a href="https://github.com/CameronH25" target="_blank">View on GitHub</a>
       </div>
-      <!-- Add more projects as needed -->
     </section>
 
     <section id="skills">
@@ -69,18 +59,13 @@
         <li>C, C++, Java, JavaScript, TypeScript, Python</li>
         <li>Linux (Ubuntu, Mint), Windows, SQL, Git/GitHub</li>
         <li>Quarto, LaTeX, R, Computer Building & Assembly</li>
-        <!-- Add more skills as needed -->
       </ul>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Feel free to reach out via <a href="mailto:cbhorine25@transy.edu">email</a>.</p>
+      <p>Email: <a href="mailto:cbhorine25@transy.edu">cbhorine25@transy.edu</a></p>
     </section>
-  </main>
-
-  <footer>
-    <p>© 2024 Cameron B. Horine. All rights reserved.</p>
-  </footer>
+  </div>
 </body>
 </html>
