--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="sidebar">
-    <h1>Cameron B. Horine</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+  <header class="main-header">
+    <div class="header-content">
+      <h1>Cameron B. Horine</h1>
+      <p>Computer Science & Economics Student</p>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <div class="main-content">
-    <section id="about">
+  <main>
+    <section id="about" class="full-section">
       <h2>About Me</h2>
       <p>B.A. in Computer Science & Economics from Transylvania University, with minors in Mathematics and German. Active in multiple clubs and pursuing cybersecurity certifications.</p>
     </section>
 
-    <section id="experience">
+    <section id="experience" class="full-section">
       <h2>Experience</h2>
       <div class="experience-item">
         <h3>Sports Statistics Work-Study</h3>
@@ -39,7 +42,7 @@
       </div>
     </section>
 
-    <section id="projects">
+    <section id="projects" class="full-section">
       <h2>Projects</h2>
       <div class="project-item">
         <h3>Chess.com Clone</h3>
@@ -53,7 +56,7 @@
       </div>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="full-section">
       <h2>Skills</h2>
       <ul class="skills-list">
         <li>C, C++, Java, JavaScript, TypeScript, Python</li>
@@ -62,10 +65,14 @@
       </ul>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="full-section">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:cbhorine25@transy.edu">cbhorine25@transy.edu</a></p>
     </section>
-  </div>
+  </main>
+
+  <footer>
+    <p>© 2024 Cameron B. Horine. All rights reserved.</p>
+  </footer>
 </body>
 </html>
