--- a/index.html
+++ b/index.html
@@ -13,61 +13,31 @@
       <p>Computer Science & Economics Student</p>
       <nav class="main-nav">
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about-section">About</a></li>
+          <li><a href="#experience-section">Experience</a></li>
+          <li><a href="#projects-section">Projects</a></li>
+          <li><a href="#skills-section">Skills</a></li>
+          <li><a href="#contact-section">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
-    <section id="about" class="full-section">
-      <h2>About Me</h2>
-      <p>B.A. in Computer Science & Economics from Transylvania University, with minors in Mathematics and German. Active in multiple clubs and pursuing cybersecurity certifications.</p>
+  <main class="main-sections">
+    <section id="about-section" class="image-section" style="background-image: url('images/about.jpg');">
+      <a href="about.html" class="overlay-text">About</a>
     </section>
-
-    <section id="experience" class="full-section">
-      <h2>Experience</h2>
-      <div class="experience-item">
-        <h3>Sports Statistics Work-Study</h3>
-        <p><strong>Transylvania University</strong> (September 2024 - Present)</p>
-        <ul>
-          <li>Tracked and recorded game data, contributing to post-game analysis.</li>
-          <li>Collaborated with coaches and event organizers to ensure accurate data tracking.</li>
-          <li>Utilized digital scoring systems in fast-paced environments.</li>
-        </ul>
-      </div>
+    <section id="experience-section" class="image-section" style="background-image: url('images/experience.jpg');">
+      <a href="experience.html" class="overlay-text">Experience</a>
     </section>
-
-    <section id="projects" class="full-section">
-      <h2>Projects</h2>
-      <div class="project-item">
-        <h3>Chess.com Clone</h3>
-        <p>Developing an offline version of Chess.com using TypeScript, featuring move validation and dynamic UI.</p>
-        <a href="https://github.com/CameronH25" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-item">
-        <h3>Linux Command Line Interface</h3>
-        <p>Built a custom CLI in C for Linux, supporting internal and external commands with efficient system interaction.</p>
-        <a href="https://github.com/CameronH25" target="_blank">View on GitHub</a>
-      </div>
+    <section id="projects-section" class="image-section" style="background-image: url('images/projects.jpg');">
+      <a href="projects.html" class="overlay-text">Projects</a>
     </section>
-
-    <section id="skills" class="full-section">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>C, C++, Java, JavaScript, TypeScript, Python</li>
-        <li>Linux (Ubuntu, Mint), Windows, SQL, Git/GitHub</li>
-        <li>Quarto, LaTeX, R, Computer Building & Assembly</li>
-      </ul>
+    <section id="skills-section" class="image-section" style="background-image: url('images/skills.jpg');">
+      <a href="skills.html" class="overlay-text">Skills</a>
     </section>
-
-    <section id="contact" class="full-section">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:cbhorine25@transy.edu">cbhorine25@transy.edu</a></p>
+    <section id="contact-section" class="image-section" style="background-image: url('images/contact.jpg');">
+      <a href="contact.html" class="overlay-text">Contact</a>
     </section>
   </main>
 
