Major Style Changes

--- a/index.html
+++ b/index.html
@@ -3,46 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cameron Horine - Portfolio</title>
+  <title>Cameron Blaine Horine - Portfolio</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="main-header">
-    <div class="header-content">
-      <h1>Cameron B. Horine</h1>
-      <p>Computer Science & Economics Student</p>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="#about-section">About</a></li>
-          <li><a href="#experience-section">Experience</a></li>
-          <li><a href="#projects-section">Projects</a></li>
-          <li><a href="#skills-section">Skills</a></li>
-          <li><a href="#contact-section">Contact</a></li>
-        </ul>
+  <header class="header-container">
+    <div class="logo">School Logo Here</div>
+    <div class="title">
+      <h1>Cameron Blaine Horine</h1>
+      <nav class="nav-cards">
+        <a href="about.html" class="card">About Me</a>
+        <a href="education.html" class="card">Education</a>
+        <a href="projects.html" class="card">Projects</a>
+        <a href="experience.html" class="card">Experience</a>
+        <a href="courses.html" class="card">Courses of Special Interest</a>
       </nav>
     </div>
   </header>
-
-  <main class="main-sections">
-    <section id="about-section" class="image-section" style="background-image: url('images/about.jpg');">
-      <a href="about.html" class="overlay-text">About</a>
-    </section>
-    <section id="experience-section" class="image-section" style="background-image: url('images/experience.jpg');">
-      <a href="experience.html" class="overlay-text">Experience</a>
-    </section>
-    <section id="projects-section" class="image-section" style="background-image: url('images/projects.jpg');">
-      <a href="projects.html" class="overlay-text">Projects</a>
-    </section>
-    <section id="skills-section" class="image-section" style="background-image: url('images/skills.jpg');">
-      <a href="skills.html" class="overlay-text">Skills</a>
-    </section>
-    <section id="contact-section" class="image-section" style="background-image: url('images/contact.jpg');">
-      <a href="contact.html" class="overlay-text">Contact</a>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2024 Cameron B. Horine. All rights reserved.</p>
-  </footer>
 </body>
 </html>
