--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 </head>
 <body>
   <header class="header-container">
-    <div class="logo">School Logo Here</div>
-    <div class="title">
-      <h1>Cameron Blaine Horine</h1>
-      <nav class="nav-cards">
-        <a href="about.html" class="card">About Me</a>
-        <a href="education.html" class="card">Education</a>
-        <a href="projects.html" class="card">Projects</a>
-        <a href="experience.html" class="card">Experience</a>
-        <a href="courses.html" class="card">Courses of Special Interest</a>
-      </nav>
+    <div class="header-content">
+      <div class="logo">
+        <img src="path/to/school-logo.png" alt="School Logo" class="logo-image">
+      </div>
+      <div class="title-and-nav">
+        <h1 class="title">Cameron Blaine Horine</h1>
+        <nav class="nav-links">
+          <a href="about.html">About Me</a>
+          <a href="education.html">Education</a>
+          <a href="projects.html">Projects</a>
+          <a href="experience.html">Experience</a>
+          <a href="courses.html">Courses of Special Interest</a>
+        </nav>
+      </div>
     </div>
   </header>
 </body>
