--- a/index.html
+++ b/index.html
@@ -4,25 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cameron Blaine Horine - Portfolio</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header-container">
-    <div class="header-content">
-      <div class="logo">
-        <img src="path/to/school-logo.png" alt="School Logo" class="logo-image">
-      </div>
-      <div class="title-and-nav">
-        <h1 class="title">Cameron Blaine Horine</h1>
-        <nav class="nav-links">
-          <a href="about.html">About Me</a>
-          <a href="education.html">Education</a>
-          <a href="projects.html">Projects</a>
-          <a href="experience.html">Experience</a>
-          <a href="courses.html">Courses of Special Interest</a>
-        </nav>
-      </div>
+  <div class="container">
+    <div class="logo-section">
+      <img src="sample-logo.png" alt="School Logo" class="logo">
     </div>
-  </header>
+    <div class="info-section">
+      <h1 class="name">Cameron Blaine Horine</h1>
+      <nav class="nav-links">
+        <a href="about.html">About Me</a>
+        <a href="education.html">Education</a>
+        <a href="projects.html">Projects</a>
+        <a href="experience.html">Experience</a>
+        <a href="courses.html">Courses of Special Interest</a>
+      </nav>
+    </div>
+  </div>
 </body>
 </html>
