--- a/index.html
+++ b/index.html
@@ -1,26 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cameron Blaine Horine - Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Your Name - Resume Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to CSS file -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts (Optional) -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <div class="logo-section">
-      <img src="sample-logo.png" alt="School Logo" class="logo">
-    </div>
-    <div class="info-section">
-      <h1 class="name">Cameron Blaine Horine</h1>
-      <nav class="nav-links">
-        <a href="about.html">About Me</a>
-        <a href="education.html">Education</a>
-        <a href="projects.html">Projects</a>
-        <a href="experience.html">Experience</a>
-        <a href="courses.html">Courses of Special Interest</a>
-      </nav>
-    </div>
-  </div>
+    <!-- Header Section -->
+    <header>
+        <div class="header-content">
+            <h1>Your Name</h1>
+            <h2>Your Profession</h2>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about">
+        <h3>About Me</h3>
+        <p>Write a brief introduction about yourself, your passions, and your professional goals.</p>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h3>Skills</h3>
+        <ul class="skills-list">
+            <li><span>Skill 1</span></li>
+            <li><span>Skill 2</span></li>
+            <li><span>Skill 3</span></li>
+            <!-- Add more skills as needed -->
+        </ul>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience">
+        <h3>Experience</h3>
+        <div class="experience-item">
+            <h4>Job Title at Company Name</h4>
+            <span class="date">Start Date - End Date</span>
+            <p>Describe your role, responsibilities, and achievements in this position.</p>
+        </div>
+        <!-- Add more experience items as needed -->
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+        <h3>Education</h3>
+        <div class="education-item">
+            <h4>Degree, Major</h4>
+            <span class="date">Graduation Year</span>
+            <p>Institution Name</p>
+        </div>
+        <!-- Add more education items as needed -->
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <h3>Portfolio</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="image1.jpg" alt="Project 1">
+                <div class="portfolio-item-info">
+                    <h4>Project Title</h4>
+                    <p>Short description of the project.</p>
+                </div>
+            </div>
+            <!-- Add more portfolio items as needed -->
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h3>Contact Me</h3>
+        <form action="mailto:your.email@example.com" method="post" enctype="text/plain">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="mail" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2023 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
