--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Your Name - Resume Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to CSS file -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Google Fonts (Optional) -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
