--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <!-- Header Section -->
     <header>
         <div class="header-content">
-            <img src="university-logo.png" alt="University Logo" class="university-logo">
-            <div class="header-right">
-                <h1>Your Name</h1>
-                <nav>
-                    <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#experience">Experience</a></li>
-                        <li><a href="#education">Education</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <img src="images/university-logo.png" alt="University Logo" class="university-logo">
+            <span class="separator">|</span>
+            <h1>Your Name</h1>
+            <span class="separator">|</span>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -74,7 +74,7 @@
         <h3>Portfolio</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="image1.jpg" alt="Project 1">
+                <img src="images/image1.jpg" alt="Project 1">
                 <div class="portfolio-item-info">
                     <h4>Project Title</h4>
                     <p>Short description of the project.</p>
@@ -101,4 +101,3 @@
     </footer>
 </body>
 </html>
-
