--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Name - Resume Portfolio</title>
+    <title>Your Name - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="css/styles.css">
@@ -10,94 +10,19 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="header-content">
-            <img src="images/university-logo.png" alt="University Logo" class="university-logo">
-            <span class="separator">|</span>
-            <h1>Your Name</h1>
-            <span class="separator">|</span>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about">
-        <h3>About Me</h3>
-        <p>Write a brief introduction about yourself, your passions, and your professional goals.</p>
-    </section>
-
-    <!-- Skills Section -->
-    <section id="skills">
-        <h3>Skills</h3>
-        <ul class="skills-list">
-            <li><span>Skill 1</span></li>
-            <li><span>Skill 2</span></li>
-            <li><span>Skill 3</span></li>
-            <!-- Add more skills as needed -->
-        </ul>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience">
-        <h3>Experience</h3>
-        <div class="experience-item">
-            <h4>Job Title at Company Name</h4>
-            <span class="date">Start Date - End Date</span>
-            <p>Describe your role, responsibilities, and achievements in this position.</p>
-        </div>
-        <!-- Add more experience items as needed -->
-    </section>
-
-    <!-- Education Section -->
-    <section id="education">
-        <h3>Education</h3>
-        <div class="education-item">
-            <h4>Degree, Major</h4>
-            <span class="date">Graduation Year</span>
-            <p>Institution Name</p>
-        </div>
-        <!-- Add more education items as needed -->
-    </section>
-
-    <!-- Portfolio Section -->
-    <section id="portfolio">
-        <h3>Portfolio</h3>
-        <div class="portfolio-grid">
-            <div class="portfolio-item">
-                <img src="images/image1.jpg" alt="Project 1">
-                <div class="portfolio-item-info">
-                    <h4>Project Title</h4>
-                    <p>Short description of the project.</p>
-                </div>
-            </div>
-            <!-- Add more portfolio items as needed -->
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h3>Contact Me</h3>
-        <form action="mailto:your.email@example.com" method="post" enctype="text/plain">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="mail" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
-    </footer>
+    <!-- Home Page Content -->
+    <div class="home-container">
+        <img src="images/university-logo.png" alt="University Logo" class="university-logo">
+        <h1>Your Name</h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="about.html">About</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
