--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Home Page Content -->
     <div class="home-container">
-        <img src="images/University-logo.jpg" alt="University Logo" class="university-logo">
+        <img src="images/UniLogo.jpg" alt="University Logo" class="university-logo">
         <h1>Your Name</h1>
         <nav>
             <ul class="nav-links">
