--- a/about.html
+++ b/about.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Google Fonts (Optional) -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- About Page Content -->
+    <!-- Header with Navigation -->
     <header>
         <nav>
             <ul class="nav-links">
@@ -16,18 +18,21 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="education.html">Education</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- About Page Content -->
     <div class="section-container">
         <h2>About Me</h2>
         <p>Write a brief introduction about yourself, your passions, and your professional goals.</p>
     </div>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2023 Your Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
