--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1>Your Name</h1>
         <nav>
             <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="experience.html">Experience</a></li>
