--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Home Page Content -->
     <div class="home-container">
         <img src="images/UniLogo.jpg" alt="University Logo" class="university-logo">
-        <h1>Your Name</h1>
+        <h1>Cameron Blaine Horine</h1>
         <nav>
             <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
