--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Cameron B. Horine. All rights reserved.</p>
     </footer>
 </body>
 </html>
