--- a/education.html
+++ b/education.html
@@ -25,8 +25,9 @@
 
     <!-- About Page Content -->
     <div class="section-container">
-        <h2>About Me</h2>
-        <p>Write a brief introduction about yourself, your passions, and your professional goals.</p>
+        <h2>EDUCATION</h2>
+        <p>I am currently a student at Transylvania University.</p>
+        <p>My B.A. is in Computer Science and Economics, with a double minor in German and Mathematics.</p>
     </div>
 
     <!-- Footer -->
