--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
     <!-- About Page Content -->
     <div class="section-container">
         <h2>About Me</h2>
-        <p>Write a brief introduction about yourself, your passions, and your professional goals.</p>
+        <p>I am an autodidact in Philosophy and Politics.</p>
+        <p>I have extensive readings on Philosophers such as: Friedrich Nietzsche, Søren Kierkegaard, Johann Fichte, Ludwig Feuerbach, Arthur Schopenhauer, Georg Hegel, Karl Marx, John Stuart Mill, and many others.</p>
+
     </div>
 
     <!-- Footer -->
