--- a/about.html
+++ b/about.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Google Fonts (Optional) -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <!-- Google Fonts (Alegreya) -->
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
+    <style>
+        p {
+          font-family: 'Alegreya', serif;
+        }
+    </style>
 </head>
 <body>
     <!-- Header with Navigation -->
@@ -28,7 +33,6 @@
         <h2>About Me</h2>
         <p>I am an autodidact in Philosophy and Politics.</p>
         <p>I have extensive readings on Philosophers such as: Friedrich Nietzsche, Søren Kierkegaard, Johann Fichte, Ludwig Feuerbach, Arthur Schopenhauer, Georg Hegel, Karl Marx, John Stuart Mill, and many others.</p>
-
     </div>
 
     <!-- Footer -->
@@ -37,4 +41,3 @@
     </footer>
 </body>
 </html>
-
