--- a/about.html
+++ b/about.html
@@ -82,19 +82,19 @@
                 <div class="overlay">Philosophy</div>
             </div>
             <div class="grid-item">
-                <img src="path/to/your-image3.jpg" alt="Film">
+                <img src="images/film.jpg" alt="Film">
                 <div class="overlay">Film</div>
             </div>
             <div class="grid-item">
-                <img src="path/to/your-image4.jpg" alt="Chess">
+                <img src="images/chess.jpg" alt="Chess">
                 <div class="overlay">Chess</div>
             </div>
             <div class="grid-item">
-                <img src="path/to/your-image5.jpg" alt="Mathematics">
+                <img src="images/math.jpg" alt="Mathematics">
                 <div class="overlay">Mathematics</div>
             </div>
             <div class="grid-item">
-                <img src="path/to/your-image6.jpg" alt="Languages">
+                <img src="images/languages.jpg" alt="Languages">
                 <div class="overlay">Languages</div>
             </div>
         </div>
