--- a/about.html
+++ b/about.html
@@ -14,11 +14,13 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            min-height: 100vh;
         }
         .section-container {
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
+            min-height: calc(100vh - 60px); /* Adjust height to account for the footer */
         }
         h2 {
             text-align: center;
@@ -33,11 +35,13 @@
             position: relative;
             border-radius: 5px;
             overflow: hidden;
+            cursor: pointer;
         }
         .grid-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: opacity 0.3s;
         }
         .overlay {
             position: absolute;
@@ -45,13 +49,26 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Dark overlay to make text readable */
+            background-color: rgba(0, 0, 0, 0.8); /* Darker overlay */
             display: flex;
             align-items: center;
             justify-content: center;
             color: white;
             font-size: 1.5em;
             text-align: center;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+        .grid-item:hover img {
+            opacity: 0; /* Hide the image on hover */
+        }
+        .grid-item:hover .overlay {
+            opacity: 1; /* Show the text on hover */
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f1f1f1;
         }
     </style>
 </head>
@@ -73,30 +90,30 @@
     <div class="section-container">
         <h2>About Me</h2>
         <div class="grid-container">
-            <div class="grid-item">
-                <img src="path/to/your-image1.jpg" alt="My Life">
+            <a href="my-life.html" class="grid-item">
+                <img src="images/my-life.jpg" alt="My Life">
                 <div class="overlay">My Life</div>
-            </div>
-            <div class="grid-item">
+            </a>
+            <a href="philosophy.html" class="grid-item">
                 <img src="images/philosophy.jpg" alt="Philosophy">
                 <div class="overlay">Philosophy</div>
-            </div>
-            <div class="grid-item">
+            </a>
+            <a href="film.html" class="grid-item">
                 <img src="images/film.jpg" alt="Film">
                 <div class="overlay">Film</div>
-            </div>
-            <div class="grid-item">
+            </a>
+            <a href="chess.html" class="grid-item">
                 <img src="images/chess.jpg" alt="Chess">
                 <div class="overlay">Chess</div>
-            </div>
-            <div class="grid-item">
+            </a>
+            <a href="mathematics.html" class="grid-item">
                 <img src="images/math.jpg" alt="Mathematics">
                 <div class="overlay">Mathematics</div>
-            </div>
-            <div class="grid-item">
+            </a>
+            <a href="languages.html" class="grid-item">
                 <img src="images/languages.jpg" alt="Languages">
                 <div class="overlay">Languages</div>
-            </div>
+            </a>
         </div>
     </div>
 
@@ -106,4 +123,3 @@
     </footer>
 </body>
 </html>
-
