--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
     <div class="section-container">
         <h2>About Me</h2>
         <div class="grid-container">
-            <a href="my-life.html" class="grid-item">
+            <a href="images/life.jpg" class="grid-item">
                 <img src="images/my-life.jpg" alt="My Life">
                 <div class="overlay">My Life</div>
             </a>
