--- a/about.html
+++ b/about.html
@@ -9,18 +9,22 @@
     <!-- Google Fonts (Alegreya) -->
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Alegreya', serif;
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            min-height: 100vh;
+        }
+        body {
+            font-family: 'Alegreya', serif;
+            min-height: 100vh; /* Ensures the body takes at least the full height of the viewport */
+            display: flex;
+            flex-direction: column;
         }
         .section-container {
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
-            min-height: calc(100vh - 60px); /* Adjust height to account for the footer */
+            flex: 1; /* Allows the content area to grow and push the footer down */
         }
         h2 {
             text-align: center;
@@ -68,7 +72,8 @@
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #f1f1f1;
+            background-color: #333; /* Darker background for the footer */
+            color: white; /* Light text for readability */
         }
     </style>
 </head>
@@ -90,7 +95,7 @@
     <div class="section-container">
         <h2>About Me</h2>
         <div class="grid-container">
-            <a href="images/life.jpg" class="grid-item">
+            <a href="my-life.html" class="grid-item">
                 <img src="images/my-life.jpg" alt="My Life">
                 <div class="overlay">My Life</div>
             </a>
