--- a/about.html
+++ b/about.html
@@ -16,15 +16,15 @@
         }
         body {
             font-family: 'Alegreya', serif;
-            min-height: 100vh; /* Ensures the body takes at least the full height of the viewport */
             display: flex;
             flex-direction: column;
+            min-height: 100vh;
         }
         .section-container {
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
-            flex: 1; /* Allows the content area to grow and push the footer down */
+            flex: 1;
         }
         h2 {
             text-align: center;
@@ -53,7 +53,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8); /* Darker overlay */
+            background-color: rgba(0, 0, 0, 0.8);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -64,16 +64,16 @@
             transition: opacity 0.3s;
         }
         .grid-item:hover img {
-            opacity: 0; /* Hide the image on hover */
+            opacity: 0;
         }
         .grid-item:hover .overlay {
-            opacity: 1; /* Show the text on hover */
+            opacity: 1;
         }
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #333; /* Darker background for the footer */
-            color: white; /* Light text for readability */
+            background-color: #333;
+            color: white;
         }
     </style>
 </head>
@@ -96,7 +96,7 @@
         <h2>About Me</h2>
         <div class="grid-container">
             <a href="my-life.html" class="grid-item">
-                <img src="images/my-life.jpg" alt="My Life">
+                <img src="images/life.jpg" alt="My Life">
                 <div class="overlay">My Life</div>
             </a>
             <a href="philosophy.html" class="grid-item">
